layout making done

--- a/index.html
+++ b/index.html
@@ -13,12 +13,56 @@
     <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
-    
-    <header>
-
-    </header>
-    <main>
-
+        <div class="container testimonial_content" >
+            <div class="item_one">
+                <div class="star_bg">
+                    <img src="image/Star_fill_gray.svg" alt="">
+                </div>
+                <h1>Reviewers</h1>
+                <p>Reviewers is where people can access guidelines, checklists, and other tools to assist them in
+                    reviewing papers or manuscripts. It provides a structured approach to ensure that the review process
+                    is thorough, efficient, and consistent.</p>
+                <ul>
+                    <li>Checklist to Review an Academic Paper</li>
+                    <li>Peer Review Checklist</li>
+                    <li>Checklist for Editors, Reviewers, and Authors of SPIE Journals</li>
+                </ul>
+            </div>
+            <div class="item_two">
+                <div class="google box">
+                    <div class="star_wrapper">
+                        <div class="testimonial_img">
+                            <img src="image/google_testimonial.png" alt="google testimonial">
+                        </div>
+                        <div class="star">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill_gray.svg" alt="">
+                        </div>
+                    </div>
+                    <h3>Samantha Lee</h3>
+                    <p>The checklist ensures that the review process is thorough</p>
+                </div>
+                <div class="meta box">
+                    <div class="star_wrapper">
+                        <div class="testimonial_img">
+                            <img src="image/meta_testimonial.png" alt="meta testimonial">
+                        </div>
+                        <div class="star">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                            <img src="image/Star_fill.svg" alt="">
+                        </div>
+                    </div>
+                    <h3>Rachel Patel</h3>
+                    <p>I highly recommend the Writecream Business Description</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         
