project responsive done

--- a/index.html
+++ b/index.html
@@ -29,37 +29,41 @@
                 </ul>
             </div>
             <div class="item_two">
-                <div class="google box">
-                    <div class="star_wrapper">
-                        <div class="testimonial_img">
-                            <img src="image/google_testimonial.png" alt="google testimonial">
+                <div class="google">
+                    <div class="box">
+                        <div class="star_wrapper">
+                            <div class="testimonial_img">
+                                <img src="image/google_testimonial.png" alt="google testimonial">
+                            </div>
+                            <div class="star">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill_gray.svg" alt="">
+                            </div>
                         </div>
-                        <div class="star">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill_gray.svg" alt="">
-                        </div>
+                        <h3>Samantha Lee</h3>
+                        <p>The checklist ensures that the review process is thorough</p>
                     </div>
-                    <h3>Samantha Lee</h3>
-                    <p>The checklist ensures that the review process is thorough</p>
                 </div>
-                <div class="meta box">
-                    <div class="star_wrapper">
-                        <div class="testimonial_img">
-                            <img src="image/meta_testimonial.png" alt="meta testimonial">
+                <div class="meta">
+                    <div class="box">
+                        <div class="star_wrapper">
+                            <div class="testimonial_img">
+                                <img src="image/meta_testimonial.png" alt="meta testimonial">
+                            </div>
+                            <div class="star">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                                <img src="image/Star_fill.svg" alt="">
+                            </div>
                         </div>
-                        <div class="star">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                            <img src="image/Star_fill.svg" alt="">
-                        </div>
+                        <h3>Rachel Patel</h3>
+                        <p>I highly recommend the Writecream Business Description</p>
                     </div>
-                    <h3>Rachel Patel</h3>
-                    <p>I highly recommend the Writecream Business Description</p>
                 </div>
             </div>
         </div>
